influx 관련 참고 사항, 기타 수정

--- a/SpringBoot2WarSample/src/main/resources/templates/test2/list.html
+++ b/SpringBoot2WarSample/src/main/resources/templates/test2/list.html
@@ -56,7 +56,7 @@ $(document).ready( function () {
     });
     
     dataTableObj.DataTable({
-        "pageLength": 5,
+        "pageLength": [[${search.length}]],
         "paging": true,
         "pagingType" : "full_numbers",
         "lengthChange": true,
